// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CapTable should render the table upon first opening of page 1`] = `
<DocumentFragment>
  <div>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        Enter details for cap 1
      </legend>
      <div
        class="flex-container"
      >
        <div
          class="govuk-!-margin-left-4 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <label
              class="govuk-label"
              for="cap-name-0"
            >
              <span
                class="govuk-visually-hidden"
              >
                Cap Name - Cap 1
              </span>
              <span
                aria-hidden="true"
              >
                Cap name
              </span>
            </label>
            <span
              class="govuk-hint"
              id="cap-name-hint-0"
            >
              50 characters max
            </span>
             
            <div
              class=""
            >
              <input
                aria-describedby="cap-name-hint-0"
                class="govuk-input govuk-input--width-40 govuk-product-name-input__inner__input"
                id="cap-name-0"
                maxlength="50"
                name="capNameInput0"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="govuk-!-margin-left-2 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <label
              class="govuk-label"
              for="cap-price-0"
            >
              <span
                class="govuk-visually-hidden"
              >
                Cap Price, in pounds - Cap 1
              </span>
              <span
                aria-hidden="true"
              >
                Price
              </span>
            </label>
            <span
              class="govuk-hint"
              id="cap-price-hint-0"
            >
              e.g. 2.99
            </span>
            <div
              class="govuk-currency-input"
            >
              <div
                class="govuk-currency-input__inner"
              >
                <span
                  class="govuk-currency-input__inner__unit"
                >
                  £
                </span>
                <div
                  class=""
                >
                  <input
                    aria-describedby="cap-price-hint-0"
                    class="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                    data-non-numeric="true"
                    id="cap-price-0"
                    name="capPriceInput0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="govuk-!-margin-left-2 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <label
              class="govuk-label"
              for="cap-period-duration"
            >
              Cap duration
            </label>
            <span
              class="govuk-hint"
              id="cap-duration-hint"
            >
              For example, 3 days
            </span>
            <div
              class="govuk-input__wrapper expiry-selector-wrapper"
            >
              <div
                class=""
              >
                <input
                  aria-labelledby="cap-duration-hint"
                  class="govuk-input govuk-input--width-3"
                  id="cap-period-duration-quantity-0"
                  name="capDurationInput0"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=""
              >
                <select
                  aria-labelledby="cap-duration-hint"
                  class="govuk-select expiry-selector-units"
                  id="cap-duration-unit-0"
                  name="capDurationUnitsInput0"
                >
                  <option
                    disabled=""
                    selected=""
                    value=""
                  >
                    Select One
                  </option>
                  <option
                    value="day"
                  >
                    Days
                  </option>
                  <option
                    value="week"
                  >
                    Weeks
                  </option>
                  <option
                    value="month"
                  >
                    Months
                  </option>
                </select>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`CapTable should render the table with errors 1`] = `
<DocumentFragment>
  <div>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        Enter details for cap 1
      </legend>
      <div
        class="flex-container"
      >
        <div
          class="govuk-!-margin-left-4 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <label
              class="govuk-label"
              for="cap-name-0"
            >
              <span
                class="govuk-visually-hidden"
              >
                Cap Name - Cap 1
              </span>
              <span
                aria-hidden="true"
              >
                Cap name
              </span>
            </label>
            <span
              class="govuk-hint"
              id="cap-name-hint-0"
            >
              50 characters max
            </span>
             
            <div
              class=""
            >
              <input
                aria-describedby="cap-name-0-error"
                class="govuk-input govuk-input--width-40 govuk-product-name-input__inner__input govuk-input--error"
                id="cap-name-0"
                maxlength="50"
                name="capNameInput0"
                type="text"
                value="First cap"
              />
            </div>
          </div>
        </div>
        <div
          class="govuk-!-margin-left-2 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <label
              class="govuk-label"
              for="cap-price-0"
            >
              <span
                class="govuk-visually-hidden"
              >
                Cap Price, in pounds - Cap 1
              </span>
              <span
                aria-hidden="true"
              >
                Price
              </span>
            </label>
            <span
              class="govuk-hint"
              id="cap-price-hint-0"
            >
              e.g. 2.99
            </span>
            <div
              class="govuk-currency-input"
            >
              <div
                class="govuk-currency-input__inner"
              >
                <span
                  class="govuk-currency-input__inner__unit"
                >
                  £
                </span>
                <div
                  class=""
                >
                  <input
                    aria-describedby="cap-price-hint-0"
                    class="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                    data-non-numeric="true"
                    id="cap-price-0"
                    name="capPriceInput0"
                    type="text"
                    value="2.33"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="govuk-!-margin-left-2 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <label
              class="govuk-label"
              for="cap-period-duration"
            >
              Cap duration
            </label>
            <span
              class="govuk-hint"
              id="cap-duration-hint"
            >
              For example, 3 days
            </span>
            <div
              class="govuk-input__wrapper expiry-selector-wrapper"
            >
              <div
                class=""
              >
                <input
                  aria-labelledby="cap-duration-hint"
                  class="govuk-input govuk-input--width-3"
                  id="cap-period-duration-quantity-0"
                  name="capDurationInput0"
                  type="text"
                  value="2"
                />
              </div>
              <div
                class=""
              >
                <select
                  aria-labelledby="cap-duration-hint"
                  class="govuk-select expiry-selector-units"
                  id="cap-duration-unit-0"
                  name="capDurationUnitsInput0"
                >
                  <option
                    disabled=""
                    value=""
                  >
                    Select One
                  </option>
                  <option
                    value="day"
                  >
                    Days
                  </option>
                  <option
                    selected=""
                    value="week"
                  >
                    Weeks
                  </option>
                  <option
                    value="month"
                  >
                    Months
                  </option>
                </select>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        Enter details for cap 2
      </legend>
      <div
        class="flex-container"
      >
        <div
          class="govuk-!-margin-left-4 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <div
              class=""
            >
              <input
                aria-describedby="cap-name-hint-1"
                class="govuk-input govuk-input--width-40 govuk-product-name-input__inner__input"
                id="cap-name-1"
                maxlength="50"
                name="capNameInput1"
                type="text"
                value="First cap"
              />
            </div>
          </div>
        </div>
        <div
          class="govuk-!-margin-left-2 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <div
              class="govuk-currency-input"
            >
              <div
                class="govuk-currency-input__inner"
              >
                <span
                  class="govuk-currency-input__inner__unit"
                >
                  £
                </span>
                <div
                  class=""
                >
                  <input
                    aria-describedby="cap-price-hint-1"
                    class="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                    data-non-numeric="true"
                    id="cap-price-1"
                    name="capPriceInput1"
                    type="text"
                    value="3.33"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="govuk-!-margin-left-2 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <div
              class="govuk-input__wrapper expiry-selector-wrapper"
            >
              <div
                class=""
              >
                <input
                  aria-labelledby="cap-duration-hint"
                  class="govuk-input govuk-input--width-3"
                  id="cap-period-duration-quantity-1"
                  name="capDurationInput1"
                  type="text"
                  value="2"
                />
              </div>
              <div
                class=""
              >
                <select
                  aria-labelledby="cap-duration-hint"
                  class="govuk-select expiry-selector-units"
                  id="cap-duration-unit-1"
                  name="capDurationUnitsInput1"
                >
                  <option
                    disabled=""
                    value=""
                  >
                    Select One
                  </option>
                  <option
                    selected=""
                    value="day"
                  >
                    Days
                  </option>
                  <option
                    value="week"
                  >
                    Weeks
                  </option>
                  <option
                    value="month"
                  >
                    Months
                  </option>
                </select>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`CapTable should render the table with no errors 1`] = `
<DocumentFragment>
  <div>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        Enter details for cap 1
      </legend>
      <div
        class="flex-container"
      >
        <div
          class="govuk-!-margin-left-4 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <label
              class="govuk-label"
              for="cap-name-0"
            >
              <span
                class="govuk-visually-hidden"
              >
                Cap Name - Cap 1
              </span>
              <span
                aria-hidden="true"
              >
                Cap name
              </span>
            </label>
            <span
              class="govuk-hint"
              id="cap-name-hint-0"
            >
              50 characters max
            </span>
             
            <div
              class=""
            >
              <input
                aria-describedby="cap-name-hint-0"
                class="govuk-input govuk-input--width-40 govuk-product-name-input__inner__input"
                id="cap-name-0"
                maxlength="50"
                name="capNameInput0"
                type="text"
                value="First cap"
              />
            </div>
          </div>
        </div>
        <div
          class="govuk-!-margin-left-2 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <label
              class="govuk-label"
              for="cap-price-0"
            >
              <span
                class="govuk-visually-hidden"
              >
                Cap Price, in pounds - Cap 1
              </span>
              <span
                aria-hidden="true"
              >
                Price
              </span>
            </label>
            <span
              class="govuk-hint"
              id="cap-price-hint-0"
            >
              e.g. 2.99
            </span>
            <div
              class="govuk-currency-input"
            >
              <div
                class="govuk-currency-input__inner"
              >
                <span
                  class="govuk-currency-input__inner__unit"
                >
                  £
                </span>
                <div
                  class=""
                >
                  <input
                    aria-describedby="cap-price-hint-0"
                    class="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                    data-non-numeric="true"
                    id="cap-price-0"
                    name="capPriceInput0"
                    type="text"
                    value="2.33"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="govuk-!-margin-left-2 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <label
              class="govuk-label"
              for="cap-period-duration"
            >
              Cap duration
            </label>
            <span
              class="govuk-hint"
              id="cap-duration-hint"
            >
              For example, 3 days
            </span>
            <div
              class="govuk-input__wrapper expiry-selector-wrapper"
            >
              <div
                class=""
              >
                <input
                  aria-labelledby="cap-duration-hint"
                  class="govuk-input govuk-input--width-3"
                  id="cap-period-duration-quantity-0"
                  name="capDurationInput0"
                  type="text"
                  value="2"
                />
              </div>
              <div
                class=""
              >
                <select
                  aria-labelledby="cap-duration-hint"
                  class="govuk-select expiry-selector-units"
                  id="cap-duration-unit-0"
                  name="capDurationUnitsInput0"
                >
                  <option
                    disabled=""
                    value=""
                  >
                    Select One
                  </option>
                  <option
                    value="day"
                  >
                    Days
                  </option>
                  <option
                    selected=""
                    value="week"
                  >
                    Weeks
                  </option>
                  <option
                    value="month"
                  >
                    Months
                  </option>
                </select>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        Enter details for cap 2
      </legend>
      <div
        class="flex-container"
      >
        <div
          class="govuk-!-margin-left-4 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <div
              class=""
            >
              <input
                aria-describedby="cap-name-hint-1"
                class="govuk-input govuk-input--width-40 govuk-product-name-input__inner__input"
                id="cap-name-1"
                maxlength="50"
                name="capNameInput1"
                type="text"
                value="Second cap"
              />
            </div>
          </div>
        </div>
        <div
          class="govuk-!-margin-left-2 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <div
              class="govuk-currency-input"
            >
              <div
                class="govuk-currency-input__inner"
              >
                <span
                  class="govuk-currency-input__inner__unit"
                >
                  £
                </span>
                <div
                  class=""
                >
                  <input
                    aria-describedby="cap-price-hint-1"
                    class="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                    data-non-numeric="true"
                    id="cap-price-1"
                    name="capPriceInput1"
                    type="text"
                    value="3.33"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="govuk-!-margin-left-2 govuk-!-margin-right-2"
        >
          <div
            class="govuk-form-group "
          >
            <div
              class="govuk-input__wrapper expiry-selector-wrapper"
            >
              <div
                class=""
              >
                <input
                  aria-labelledby="cap-duration-hint"
                  class="govuk-input govuk-input--width-3"
                  id="cap-period-duration-quantity-1"
                  name="capDurationInput1"
                  type="text"
                  value="2"
                />
              </div>
              <div
                class=""
              >
                <select
                  aria-labelledby="cap-duration-hint"
                  class="govuk-select expiry-selector-units"
                  id="cap-duration-unit-1"
                  name="capDurationUnitsInput1"
                >
                  <option
                    disabled=""
                    value=""
                  >
                    Select One
                  </option>
                  <option
                    selected=""
                    value="day"
                  >
                    Days
                  </option>
                  <option
                    value="week"
                  >
                    Weeks
                  </option>
                  <option
                    value="month"
                  >
                    Months
                  </option>
                </select>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;
